# survillace_generator

./: Ui_main_window.py  main_window.ui  pyproject.toml  survillance_generator.py  template.pptx
survillance_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
