[tool.poetry]
name = "survillance_generator"
version = "0.1.0"
description = "LN3 IT"
authors = ["Lex Chen"]

[tool.poetry.dependencies]
python = "^3.8"
pyqt5_tools = "^5.13.2"
python-pptx = "^0.6.18"
sip = "^5.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
autopep8 = "^1.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
